---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: ???
  Compatibility:
    - Fixed crash on load with Transport Drones
    - Remove ability for transport drone request depots to request packed crates (but balance concerns remain)
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 4 June 2022
  Features:
    - Added setting to disable deep landfill and landfill changes
    - Added Robot Attrition as an optional dependency
  Bugfixes:
    - Fixed incorrect map preset warning appearing on every load
---------------------------------------------------------------------------------------------------
Version: 1.0.2
Date: 31 May 2022
  Bugfixes:
    - Fixed X-Logistics Default map preset unintentionally changing trees and enemy bases
    - Fixed decoratives spawning on shallow water
    - Fixed crash when a spidertron docks (Spidertron Patrols)
---------------------------------------------------------------------------------------------------
Version: 1.0.1
Date: 30 May 2022
  Changes:
    - Increased default chance of trees dropping seeds from 2% to 4%
  Bugfixes:
    - Fixed crash when loading without Canal Builder
---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 30 May 2022
  Features:
    - Initial release