@@ -1,13 +1,13 @@
 [item-name]
+x-landfill=Shallow landfill
 x-deep-landfill=Deep landfill
 hovercraft-missile-turret=Missile turret
 deadlock-crate-item=Crate: __2__ × __1__
 
 
 [item-description]
-landfill=Can be placed on shallow water to create terrain you can build on.
+x-landfill=Can be placed on shallow water to create terrain you can build on.
 x-deep-landfill=Can be placed on non-shallow water to create terrain you can build on.
-
 
 [recipe-name]
 # Override __1__: pack crate
@@ -22,8 +22,14 @@ jag-growing-breed=Tree breeding
 jag-growing-normal=Normal way to get wood. On average, returns all the seeds back plus a bit extra.
 
 [technology-name]
+x-landfill=Shallow landfill
+x-deep-landfill=Deep landfill
 x-greenhouse=Greenhouse
 deadlock-crating=Crating
+
+[technology-description]
+x-landfill=Can be placed on shallow water to create terrain you can build on.
+x-deep-landfill=Can be placed on non-shallow water to create terrain you can build on.
 
 [mod-setting-name]
 x-deep-landfill=Enable deep landfill [img=info]
